<resources>
    <string name="app_name">RentalManager</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_admin">Admin</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_dashboard">DASHBOARD</string>
    <string name="nav_item_rentals">RENTALS</string>
    <string name="nav_item_customers">CUSTOMERS</string>
    <string name="nav_item_vehicles">VEHICLES</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_dashboard</item>
        <item>@string/nav_item_rentals</item>
        <item>@string/nav_item_customers</item>
        <item>@string/nav_item_vehicles</item>
    </string-array>

    <string name="toolbar_title">Rental Manager</string>
    <string name="title_dashboard">DASHBOARD</string>
    <string name="title_rentals">RENTALS</string>
    <string name="title_customers">CUSTOMERS</string>
    <string name="title_vehicles">VEHICLES</string>
    <string name="daily_rate">DAYLY RATE :</string>
    <string name="plate_number">PLATE NUMBER :</string>
    <string name="owner_name">OWNER :</string>
    <string name="owner_phone">PHONE NUMBER :</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="vehicle_available">AVAILABLE</string>
    <string name="vehicle_make">VEHICLE MAKE</string>
    <string name="vehicle_model">VEHICLE MODEL</string>
    <string name="vehicle_plate">VEHICLE PLATE</string>
    <string name="vehicle_rate">100.00 USD</string>
    <string name="emp_fullname">Emp Full Name</string>
    <string name="emp_username">emp.username</string>
    <string name="person_phone">3849-0168</string>
    <string name="emp_profile">ADMIN</string>
    <string name="person_email">mystvictor@myapp.com</string>
    <string name="acc_exp_date">23/06/2100</string>
    <string name="btn_call">CALL</string>
    <string name="btn_mail">MAIL</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_save">SAVE</string>
</resources>
