<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="25px"
                android:minHeight="25px"
                android:background="#ffffebee"
                android:padding="5dp">

    <TextView
        android:id="@+id/textViewEmpFullNameDetails"
        android:text="@string/emp_fullname"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_16_user"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/textViewEmpUsernameDetails"
        android:text="@string/emp_username"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewEmpFullNameDetails"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_16_contact_approve"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/textViewEmpPhoneDetails"
        android:text="@string/person_phone"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewEmpUsernameDetails"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_16_smart_phone"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/textViewEmpEmailDetails"
        android:text="@string/person_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewEmpPhoneDetails"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_16_email"
        android:drawablePadding="10dp"/>
    <TextView
        android:id="@+id/textViewEmpAccExpDateDetails"
        android:text="@string/acc_exp_date"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewEmpEmailDetails"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_16_calendar"
        android:drawablePadding="10dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emp_profile"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/checkBoxEmpDetails"
        android:layout_below="@+id/textViewEmpAccExpDateDetails"
        android:textColor="@color/textColorSecondary"
        android:buttonTint="@color/textColorSecondary"/>
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_below="@+id/checkBoxEmpDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button_Call_Emp_Details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/btn_call"
            android:textColor="@color/textColorSecondary"
            style="@android:style/Holo.Light.ButtonBar"/>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/button_Mail_Emp_Details"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/btn_mail"
            android:textColor="@color/textColorSecondary"/>

    </LinearLayout>


</RelativeLayout>