<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="25px"
    android:minHeight="25px"
    android:paddingBottom="2dp"
    android:paddingRight="5dp"
    android:paddingTop="2dp"
    android:paddingLeft="5dp"
    android:clickable="true">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_vehicle2"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp" />
    <TextView
        android:id="@+id/textViewMake"
        android:text="@string/vehicle_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textViewModel"
        android:text="@string/vehicle_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="2dp"
        android:layout_alignTop="@+id/textViewMake"
        android:layout_toEndOf="@+id/textViewMake"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textViewPlate"
        android:text="@string/vehicle_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="2dp"
        android:layout_below="@+id/textViewMake"
        android:layout_toEndOf="@+id/imageView"/>
    <TextView
        android:id="@+id/textViewRate"
        android:text="@string/vehicle_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginLeft="2dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:textStyle="italic"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:background="@color/textColorSecondary"
        android:layout_marginTop="5dp">
    </LinearLayout>
</RelativeLayout>